# polynomial.systemc

./: .gitignore  CMakeLists.txt  run-poly-eval.sh  run-poly-int.sh
INSTRUCTIONS/: INSTRUCTIONS.md
